<resources>
    <string name="app_name">Piano Grupo 12</string>
    <string name="nombredo">do</string>
    <string name="re">re</string>
    <string name="mi">mi</string>
    <string name="fa">fa</string>
    <string name="sol">sol</string>
    <string name="la">la</string>
    <string name="si">si</string>
    <string name="do_sostenido">do sostenido</string>
    <string name="re_sostendido">re sostendido</string>
    <string name="fa_sostenido">fa sostenido</string>
    <string name="sol_sostenido">sol sostenido</string>
    <string name="la_sostenido">la sostenido</string>
    <string name="zebra">zebra</string>
    <string name="monkey">monkey</string>
    <string name="frog">frog</string>
    <string name="elephant">elephant</string>
    <string name="lion">lion</string>
    <string name="imagen_de_elefante">imagen de elefante</string>
    <string name="imagen_de_zebra">imagen de zebra</string>
    <string name="imagen_de_rana">imagen de rana</string>
    <string name="imagen_de_mono">imagen de mono</string>
    <string name="imagen_de_leon">imagen de leon</string>
    <string name="cambiar_tipo_de_piano">Cambiar Tipo de Piano</string>
    <string name="acerca_de_nosotros">Acerca de Nosotros</string>
    <string name="salir">Salir</string>
    <string name="person1">Luis Hernández</string>
    <string name="person2">Henry Arévalo</string>
    <string name="person3">Ricardo Melara</string>
    <string name="person4">David González</string>
</resources>